--- a/app/javascript/styles_new/mastodon/components.scss
+++ b/app/javascript/styles_new/mastodon/components.scss
@@ -7491,9 +7491,7 @@ a.status-card {
   position: relative;
   color: var(--color-text-on-media);
   background: var(--color-bg-media);
-  width: 100%;
-  max-height: max(400px, 60vh);
-  margin-inline: auto;
+  max-height: 460px;
   border-radius: 8px;
   box-sizing: border-box;
   display: flex;
